Revision history for {{$dist->name}}

{{$NEXT}}

2.019     2019-07-27 16:13:30-04:00 America/New_York
        - fix an initialization ordering bug for loggers using stdio

2.018     2019-07-26 18:36:56-04:00 America/New_York
        - add enable_stdout and enable_stderr to, uh, enable stdout and enable
          stderr (after initial construction)

2.017     2019-03-12 21:10:26-04:00 America/New_York
        - syslog_socket can now be supplied to replace the native socket for
          Sys::Syslog (thanks, Jon Stuart!)

2.016     2018-02-21 12:47:46-05:00 America/New_York
        - the Proxy logger now respects the same overloading as the root logger
        - muted works as a constructor argument (thanks, Dan Book)

2.015     2016-10-17 15:42:54-04:00 America/New_York
        - Log::Dispatchouli subclass can now provide its own proxy_class
          method to use something other than Log::Dispatchouli::Proxy

2.014     2016-10-14 18:28:36-04:00 America/New_York
        - non-trial release of v2.013

2.013     2016-07-30 16:34:57-04:00 America/New_York (TRIAL RELEASE)
        - minor optimizations to callbacks (thanks, Olivier Mengué)

2.012     2014-11-30 08:49:01-05:00 America/New_York
          avoid a newly-introduced warning on older perls (thanks, Christopher
          J. Madsen)

2.011     2014-11-29 08:50:45-05:00 America/New_York
          some optimizations in timestamp and pid logging (thanks, Olivier
          Mengué)

2.010     2014-07-28 22:24:23-04:00 America/New_York
          add the file_format option (thanks, Randy Stauner)

2.009     2014-01-11 14:14:11-05:00 America/New_York
          load the Proxy class earlier, to get it loaded prefork

2.008     2013-09-26 20:39:11 America/New_York
          fix test for JSON::PP, which doesn't always follow orders about
          spaces!  (thanks, Dagfinn Ilmari Mannsåker!)

2.007     2013-09-25 22:12:22 America/New_York
          doc fixes and tests (thanks George Hartzell and Randy Stauner)
